Deleted the section html content

--- a/themes/customized/layouts/_default/section.html
+++ b/themes/customized/layouts/_default/section.html
@@ -1,89 +1,1 @@
-{{ define "header" }}
-<div class="row">
-  <div class="ten columns centered text-center">
-    <h1>{{i18n "blog" }}</h1>
-  </div>
-</div>
-{{ end }}
-
-{{ define "main" }}
-<div class="content-outer">
-  <div id="page-content" class="row">
-    <div id="primary" class="eight columns">
-    {{- $pages := .Pages -}}
-    {{- if .IsHome -}}
-      {{- $pages = where .Site.RegularPages "Type" "posts" -}}
-    {{- end -}}
-    {{- $paginator := .Paginate $pages -}}
-    
-    {{ range $paginator.Pages -}}
-    <article class="post">
-      <div class="post-header">
-        <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
-        <p class="post-meta">
-          <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
-          {{ with .Params.categories -}}
-          {{ $.Scratch.Set "firstcategory" true }}
-          /
-          <span class="categories">
-              {{ range . -}}
-              {{- $name := . -}}
-              {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-                {{- if not ($.Scratch.Get "firstcategory") -}}
-                / 
-                {{ else -}}
-                {{- $.Scratch.Set "firstcategory" false -}}
-                {{- end -}}
-                <a href="{{ .Permalink }}">{{ $name }}</a>
-              {{- end -}}
-              {{ end }}
-          </span>
-          {{ end }}
-        </p>
-      </div>
-      <a href="{{ .Permalink }}" title="">
-        {{ with .Params.featured_image -}}
-          <div class="post-thumb">
-            <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-          </div>
-        {{ end }}
-      </a>
-      <div class="post-description">
-        <a href="{{ .Permalink }}" title="">
-          {{ .Description }}
-        </a>
-      </div>
-      <div class="post-button">
-        <a href="{{ .Permalink }}" class="button">{{i18n "readMore_link" }}</a>
-      </div>
-    </article>
-    {{ end }}
-
-    <!-- Pagination -->
-    {{ partial "pagination.html" . }}
-    </div> <!-- Primary End-->
-
-    <div id="secondary" class="four columns end">
-      <aside id="sidebar">
-        <div class="widget">
-          <h2 class="widget-title">{{ i18n "category" }}</h2>
-          <ul class="link-list">
-            {{ range .Site.Taxonomies.categories }}
-            <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
-            {{ end }}
-          </ul>
-        </div>
-          
-        <div class="widget">
-          <h2 class="widget-title">{{ i18n "tags" }}</h2>
-          <div class="tagcloud clearfix">
-            {{ range .Site.Taxonomies.tags }}
-            <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
-            {{ end }}
-          </div>
-        </div>
-      </aside> <!-- Sidebar End -->
-    </div> <!-- Secondary End-->
-  </div>
-</div>
-{{ end }}
+old
