Fixed the single page header

--- a/themes/customized/layouts/_default/single.html
+++ b/themes/customized/layouts/_default/single.html
@@ -1,12 +1,10 @@
-{{ define "header" }}
-<div id="page-title">
+  {{ define "header" }}
   <div class="row">
-     <div class="ten columns centered text-center">
+    <div class="col-xs-12 col-sm-12">
         <h1>{{ .Title }}</h1>
-     </div>
+    </div>
   </div>
-</div>
-{{ end }}
+  {{ end }}
 
 {{ define "main" }}
 <div class="content-outer">
