Fixed the single post header

--- a/themes/customized/layouts/posts/single.html
+++ b/themes/customized/layouts/posts/single.html
@@ -1,9 +1,7 @@
 {{ define "header" }}
-<div id="page-title">
-  <div class="row">
-     <div class="ten columns centered text-center">
-        <h1>{{ .Title }}</h1>
-     </div>
+<div class="row">
+  <div class="col-xs-12 col-sm-12">
+      <h1>{{ .Title }}</h1>
   </div>
 </div>
 {{ end }}
