Fixed the sidebar layout

--- a/themes/customized/assets/sass/blog.scss
+++ b/themes/customized/assets/sass/blog.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 main {
-  #sidebar {  
+  .sidebar-widget {  
     .link-list {
       margin-bottom: $spacing-m;
       padding: 0;
