--- a/themes/customized/assets/sass/singlepage.scss
+++ b/themes/customized/assets/sass/singlepage.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-main #sidebar {  
+main .sidebar-widget {  
     .socials a, .socials a:visited {
         color: $color-grey-100;
         text-decoration: none;
