--- a/themes/customized/layouts/posts/single.html
+++ b/themes/customized/layouts/posts/single.html
@@ -8,8 +8,7 @@
 
 {{ define "main" }}
 <div class="row">
-  <div id="primary" class="eight columns">
-    <article class="post">
+  <div class="col-xs-12 col-sm-8 col-md-9">
       <div class="entry-header cf">
         <p class="post-meta">
           <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
@@ -68,8 +67,7 @@
           {{ end }}
         {{ end }}
       </div>
-    </article> <!-- post end -->
-  </div> <!-- Primary End -->
+  </div>
 
   <div class="col-xs-12 col-sm-4 col-md-3">
     <div class="sidebar-widget">
