Changed the font from Roboto to Open Sans

--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -18,11 +18,11 @@ $color-secondary: #EDDCAC;
 $color-secondary-darker: #D4C49B;
 
 /* font family */
-$font-family: roboto-regular, sans-serif;
-$font-family-bold: roboto-bold;
-$font-family-medium: roboto-medium;
-$font-family-italic: roboto-italic;
-$font-family-bold-italic: roboto-bolditalic;
+$font-family: opensans-regular, sans-serif;
+$font-family-bold: opensans-bold;
+$font-family-medium: opensans-medium;
+$font-family-italic: opensans-italic;
+$font-family-bold-italic: opensans-bolditalic;
 
 $font-family-special: princess-sofia;
 
