--- a/themes/customized/assets/sass/fonts.scss
+++ b/themes/customized/assets/sass/fonts.scss
@@ -10,38 +10,32 @@
 
 /* Roboto */
 @font-face {
-  font-family: 'roboto-bold';
-  src: url('/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
+  font-family: 'opensans-bold';
+  src: url('/fonts/Open_Sans/OpenSans-Bold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'roboto-bolditalic';
-  src: url('/fonts/Roboto/Roboto-BoldItalic.ttf') format('truetype');
+  font-family: 'opensans-bolditalic';
+  src: url('/fonts/Open_Sans/OpenSans-BoldItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'roboto-italic';
-  src: url('/fonts/Roboto/Roboto-Italic.ttf') format('truetype');
+  font-family: 'opensans-italic';
+  src: url('/fonts/Open_Sans/OpenSans-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'roboto-regular';
-  src: url('/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+  font-family: 'opensans-regular';
+  src: url('/fonts/Open_Sans/OpenSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'roboto-medium';
-  src: url('/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'roboto-thin';
-  src: url('/fonts/Roboto/Roboto-Thin.ttf') format('truetype');
+  font-family: 'opensans-medium';
+  src: url('/fonts/Open_Sans/OpenSans-SemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
