--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -32,13 +32,19 @@ $font-size-header: 34px;
 $font-size-h1: 28px;
 $font-size-h2: 21px;
 $font-size-text: 16px;
-$font-size-text-small: 12px;
+$font-size-text-small: 14px;
 
 /* spacing */
 $spacing-s: 8px;
 $spacing-m: 16px;
 $spacing-l: 24px;
 $spacing-xl: 32px;
+
+/* border radius */
+$border-radius-s: 4px;
+$border-radius-m: 8px;
+$border-radius-l: 12px;
+$border-radius-xl: 16px;
 
 /* specials */
 $header-height: 80px;
