--- a/themes/customized/layouts/index.html
+++ b/themes/customized/layouts/index.html
@@ -1,63 +1,22 @@
-{{ define "header" }}
-<div class="row">
-  <div class="col-xs-12 col-sm-12">
-      <h1>{{i18n "blog" }}</h1>
-  </div>
-</div>
-{{ end }}
-
 {{ define "main" }}
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-md-9">
-    {{- $pages := .Pages -}}
-    {{- if .IsHome -}}
-      {{- $pages = where .Site.RegularPages "Type" "posts" -}}
-    {{- end -}}
-    {{- $paginator := .Paginate $pages -}}
-  
     <div class="row">
-      {{ range $paginator.Pages -}}
+      {{- $pages := .Pages -}}
+      {{- if .IsHome -}}
+        {{- $pages = where .Site.RegularPages "Type" "posts" -}}
+      {{- end -}}
+      {{- $paginator := .Paginate $pages -}}
+      
+      {{ range first 1 $paginator.Pages -}}
+      <div class="col-xs-12 col-sm-12 col-md-12 first-entry">
+        {{ partial "blogpost-listitem.html" . }}
+      </div>
+      {{ end }}
+
+      {{ range (after 1 $paginator.Pages) -}}
       <div class="col-xs-12 col-sm-12 col-md-6">
-        <div class="post">
-          <div class="post-header">
-            <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
-            <p class="post-meta">
-              <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
-              {{ with .Params.categories -}}
-              {{ $.Scratch.Set "firstcategory" true }}
-              /
-              <span class="categories">
-                  {{ range . -}}
-                  {{- $name := . -}}
-                  {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-                    {{- if not ($.Scratch.Get "firstcategory") -}}
-                    / 
-                    {{ else -}}
-                    {{- $.Scratch.Set "firstcategory" false -}}
-                    {{- end -}}
-                    <a href="{{ .Permalink }}">{{ $name }}</a>
-                  {{- end -}}
-                  {{ end }}
-              </span>
-              {{ end }}
-            </p>
-          </div>
-          <a href="{{ .Permalink }}" title="">
-            {{ with .Params.featured_image -}}
-              <div class="post-thumb">
-                <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-              </div>
-            {{ end }}
-          </a>
-          <div class="post-description">
-            <a href="{{ .Permalink }}" title="">
-              {{ .Description }}
-            </a>
-          </div>
-          <div class="post-button">
-            <a href="{{ .Permalink }}" class="button">{{i18n "readMore_link" }}</a>
-          </div>
-        </div>
+        {{ partial "blogpost-listitem.html" . }}
       </div>
       {{ end }}
     </div>
