Fixed the pagination styling

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -4,8 +4,7 @@
 @import 'goToTop';
 @import 'blog';
 @import 'singlepage';
-
-// @import 'pagination';
+@import 'pagination';
 // @import 'comments';
 
 body {
