--- a/themes/customized/layouts/partials/blogpost-listitem.html
+++ b/themes/customized/layouts/partials/blogpost-listitem.html
@@ -3,17 +3,6 @@
     <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
     <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
     {{ partial "customLine.html" . }}
-    <div class="categories">
-      {{ with .Params.categories -}}
-      {{ $.Scratch.Set "firstcategory" true }}
-        {{ range . -}}
-          {{- $name := . -}}
-          {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-            <a class="ghost-button" href="{{ .Permalink }}">{{ $name }}</a>
-          {{- end -}}
-        {{ end }}
-      {{ end }}
-    </div>
   </div>
 
   <a href="{{ .Permalink }}" title="">
@@ -23,6 +12,18 @@
       </div>
     {{ end }}
   </a>
+
+  <!--<div class="categories">
+    {{ with .Params.categories -}}
+    {{ $.Scratch.Set "firstcategory" true }}
+      {{ range . -}}
+        {{- $name := . -}}
+        {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
+          <a class="ghost-button" href="{{ .Permalink }}">{{ $name }}</a>
+        {{- end -}}
+      {{ end }}
+    {{ end }}
+  </div>-->
   
   <div class="post-description">
     <a href="{{ .Permalink }}" title="">
