Renamed line-size to line-size-s and m

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -114,13 +114,13 @@ main {
 .custom-line {
     background-color: $color-secondary;
     border-radius: $border-radius-s;
-    height: $line-size;
+    height: $line-size-m;
     text-align: center;
     margin: $spacing-l 0;
 
     #hexagon {
         width: 20px;
-        height: $line-size;
+        height: $line-size-m;
         background: $color-secondary;
         position: relative;
         margin: 0 auto;
