--- a/themes/customized/assets/sass/footer.scss
+++ b/themes/customized/assets/sass/footer.scss
@@ -34,6 +34,6 @@ footer {
   }
 
   .copyright {
-    border-top: $line-size solid $color-secondary;
+    border-top: $line-size-s solid $color-secondary;
   }
 }
