--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -46,10 +46,10 @@ $border-radius-m: 8px;
 $border-radius-l: 12px;
 $border-radius-xl: 16px;
 
+/* line sizes */
+$line-size-s: 2px;
+$line-size-m: 4px;
+
 /* specials */
 $header-height: 80px;
 $logo-height: 64px;
-$line-size: 4px;
-
-$button-border-radius: 4px;
-
