--- a/themes/customized/layouts/index.html
+++ b/themes/customized/layouts/index.html
@@ -27,18 +27,9 @@
   <div class="col-xs-12 col-sm-4 col-md-3">
     <div class="sidebar-widget">
       <h2 class="widget-title">{{ i18n "category" }}</h2>
-      <ul class="link-list">
+      <div class="tagcloud">
         {{ range .Site.Taxonomies.categories }}
-        <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
-        {{ end }}
-      </ul>
-    </div>
-
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "tags" }}</h2>
-      <div class="tagcloud clearfix">
-        {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
+          <a class="ghost-button" href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
         {{ end }}
       </div>
     </div>
