Fixed the blog and taxonomy layout

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -1,10 +1,14 @@
 @import 'variables';
 @import 'header';
 @import 'footer';
-@import 'goToTop';
+
 @import 'blog';
 @import 'singlepage';
+
+/* partials */
+@import 'goToTop';
 @import 'pagination';
+@import 'sidebar';
 // @import 'comments';
 
 body {
@@ -83,6 +87,7 @@ li:hover a, li:active a, li a:hover, li a:active {
         font-size: $font-size-display;
         margin: 0;
         padding-bottom: $spacing-xl;
+        text-align: center;
     }
 }
 
