--- a/themes/customized/layouts/_default/taxonomy.html
+++ b/themes/customized/layouts/_default/taxonomy.html
@@ -2,7 +2,7 @@
 {{ define "header" }}
 <div id="page-title">
   <div class="row">
-     <div class="ten columns centered text-center">
+    <div class="col-xs-12 col-sm-12">
         <h1>{{ i18n .Data.Singular }}: {{ .Title }}</h1>
      </div>
   </div>
@@ -10,90 +10,5 @@
 {{ end }}
 
 {{ define "main" }}
-{{- $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
-<div class="content-outer">
-  <div id="page-content" class="row">
-    <div id="primary" class="eight columns">    
-    {{ range $paginator.Pages -}}
-    <article class="post">
-      <div class="entry-header cf">
-        <h1><a href="{{ .Permalink }}" title="">{{ .Title }}</a></h1>
-        <p class="post-meta">
-          <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
-          {{ with .Params.categories -}}
-          {{ $.Scratch.Set "firstcategory" true }}
-          /
-          <span class="categories">
-              {{ range . -}}
-              {{- $name := . -}}
-              {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-                {{- if not ($.Scratch.Get "firstcategory") -}}
-                / 
-                {{ else -}}
-                {{- $.Scratch.Set "firstcategory" false -}}
-                {{- end -}}
-                <a href="{{ .Permalink }}">{{ $name }}</a>
-              {{- end -}}
-              {{ end }}
-          </span>
-          {{ end }}
-        </p>
-      </div>
-      <a href="{{ .Permalink }}" title="">
-        {{ with .Params.featured_image -}}
-          <div class="post-thumb">
-            <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-          </div>
-        {{ end }}
-      </a>
-      <div class="post-content">
-          <p>{{ .Description }}</p>
-      </div>
-    </article>
-    {{ end }}
-
-    <!-- Pagination -->
-    {{ partial "pagination.html" . }}
-    </div> <!-- Primary End-->
-
-    <div id="secondary" class="four columns end">
-      <aside id="sidebar">
-        <div class="widget widget_categories">
-          <h5 class="widget-title">{{ i18n "category" }}</h5>
-          <ul class="link-list cf">
-            {{ range .Site.Taxonomies.categories }}
-            <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
-            {{ end }}
-          </ul>
-        </div>
-          
-        <div class="widget widget_tag_cloud">
-          <h5 class="widget-title">{{ i18n "tags" }}</h5>
-          <div class="tagcloud cf">
-            {{ range .Site.Taxonomies.tags }}
-            <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
-            {{ end }}
-          </div>
-        </div>
-
-        {{ if .Site.Params.enableRelated -}}
-        {{- $related := .Site.RegularPages.Related . | first 5 -}}
-        {{- with $related }}
-            <h4>{{ i18n "related" }}</h4>
-            <dl class="row">
-            {{ range . }}
-                <dt class="col-md-3">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</dt>
-                <dd class="col-md-9"><a href="{{ .RelPermalink }}">{{ .Title }}</a></dd>
-            {{ end }}
-            </dl>
-        {{ end }}
-        {{ end }}
-      </aside> <!-- Sidebar End -->
-    </div> <!-- Secondary End-->
-  </div>
-</div>
+  {{ partial "blog.html" . }}
 {{ end }}
-
-
-
-
