--- a/themes/customized/layouts/partials/header.html
+++ b/themes/customized/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="navbar-expand-md fixed-top">
+<header class="fixed-top">
   <div class="container">
     <div class="navbar navbar-container">
       {{ with .Site.GetPage "home" }}
