Added the blogpost header partial

--- a/themes/customized/layouts/posts/single.html
+++ b/themes/customized/layouts/posts/single.html
@@ -1,7 +1,7 @@
 {{ define "header" }}
 <div class="row">
   <div class="col-xs-12 col-sm-12">
-      <h1>{{ .Title }}</h1>
+      <h1 class="post-header-title">{{ .Title }}</h1>
   </div>
 </div>
 {{ end }}
@@ -9,76 +9,24 @@
 {{ define "main" }}
 <div class="row">
   <div class="col-xs-12 col-sm-8 col-md-9">
-    <p class="post-meta">
-      <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
-      {{ with .Params.categories -}}
-      {{ $.Scratch.Set "firstcategory" true }}
-      /
-      <span class="categories">
-          {{ range . -}}
-          {{- $name := . -}}
-          {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-            {{- if not ($.Scratch.Get "firstcategory") -}}
-            / 
-            {{ else -}}
-            {{- $.Scratch.Set "firstcategory" false -}}
-            {{- end -}}
-            <a href="{{ .Permalink }}">{{ $name }}</a>
-          {{- end -}}
-          {{ end }}
-      </span>
+    <div class="post">
+      {{ partial "blogpost-header.html" . }}
+       
+      {{ with .Params.featured_image -}}
+      <div class="post-thumb">
+        <img src="{{ . | absURL }}" alt="post-image" title="post-image">
+      </div>
       {{ end }}
-    </p>
 
-    {{ with .Params.featured_image -}}
-    <div class="post-thumb">
-      <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-    </div>
-    {{ end }}
-
-    <div class="post-content">
-      <p class="lead">{{ .Description }}</p>
-      <p>{{ .Content }}</p>
-
-
-      {{ with .Params.tags -}}
-      {{ $.Scratch.Set "firsttag" true }}
-      <p class="tags">
-        <span>{{ i18n "tags" }}:</span>
-          {{ range (. | sort) -}}
-          {{- $name := . -}}
-          {{- with $.Site.GetPage "taxonomy" (printf "/tags/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/tags/%s" ($name | urlize))) -}}
-            {{- if not ($.Scratch.Get "firsttag") -}}
-            , 
-            {{ else -}}
-            {{- $.Scratch.Set "firsttag" false -}}
-            {{- end -}}
-            <a href="{{ .Permalink }}">{{ $name }}</a>
-          {{- end -}}
-          {{ end }}
-      </p>
-      {{ end }}
+      <div class="post-content">
+        <p class="lead">{{ .Description }}</p>
+        <p>{{ .Content }}</p>
+      </div>
     </div>
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-3">
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "category" }}</h2>
-      <ul class="link-list">
-        {{ range .Site.Taxonomies.categories }}
-        <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
-        {{ end }}
-      </ul>
-    </div>
-
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "tags" }}</h2>
-      <div class="tagcloud clearfix">
-        {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a>
-        {{ end }}
-      </div>
-    </div>
+    {{ partial "sidebar.html" . }}
   </div>
 </div>
 {{ end }}
