--- a/themes/customized/layouts/partials/blogpost-listitem.html
+++ b/themes/customized/layouts/partials/blogpost-listitem.html
@@ -1,9 +1,6 @@
 <div class="post">
-  <div class="post-header">
-    <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
-    <time class="date" datetime="2014-01-14T11:24">{{ .Date.Format (.Site.Params.dateFormatToUse | default "Mon 02 January 2006") }}</time>
-    {{ partial "customLine.html" . }}
-  </div>
+  <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
+  {{ partial "blogpost-header.html" . }}
 
   <a href="{{ .Permalink }}" title="">
     {{ with .Params.featured_image -}}
@@ -12,18 +9,6 @@
       </div>
     {{ end }}
   </a>
-
-  <!--<div class="categories">
-    {{ with .Params.categories -}}
-    {{ $.Scratch.Set "firstcategory" true }}
-      {{ range . -}}
-        {{- $name := . -}}
-        {{- with $.Site.GetPage "taxonomy" (printf "/categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "/categories/%s" ($name | urlize))) -}}
-          <a class="ghost-button" href="{{ .Permalink }}">{{ $name }}</a>
-        {{- end -}}
-      {{ end }}
-    {{ end }}
-  </div>-->
   
   <div class="post-description">
     <a href="{{ .Permalink }}" title="">
