--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -16,6 +16,7 @@ $color-grey-10: #F4F4F4;
 
 $color-secondary: #EDDCAC;
 $color-secondary-darker: #D4C49B;
+$color-secondary-evenDarker: #ADA17F;
 
 /* font family */
 $font-family: opensans-regular, sans-serif;
